Include usefull links

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<h1>[Under Construction]...</h1>
+<p>Please use one of this links:</p>
+<h2>
+  <a href="https://resume.creddle.io/resume/1eapoirrwxp" target='_blank'>Web Resume</a>
+</h2>
+<h2>
+  <a href="https://emiliosavignone.github.io/Ramon_Emilio_Savinon.pdf" target='_blank'>Download Resume</a>
+</h2>
+<h2>
+  <a href="https://www.linkedin.com/in/ramonsavinon/" target='_blank'>Linkedin</a>
+</h2>
+<h2>
+  <a href="https://github.com/emilioSavignone" target='_blank'>Github</a>
+</h2>
+
+
